--- a/src/br/ip2/project/view/perfil/perfil.fxml
+++ b/src/br/ip2/project/view/perfil/perfil.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -7,9 +9,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@perfil.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@perfil.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <GridPane layoutX="-2.0" layoutY="4.0" prefHeight="162.0" prefWidth="600.0">
         <columnConstraints>
@@ -22,10 +22,12 @@
          <children>
 
              
-            <GridPane GridPane.columnIndex="1">
+            <GridPane prefHeight="129.0" prefWidth="372.0" GridPane.columnIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints />
+                  <ColumnConstraints />
               </columnConstraints>
               <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -34,22 +36,22 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
 
-                <Label text="Nome de Usuário: " styleClass="Label" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-                <Label text="Filmes Disponiveis: " styleClass="Label" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-                <Label text="Creditos: " styleClass="Label" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-                <Label text="Mais sobre mim: " styleClass="Label" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+                <Label styleClass="Label" text="Nome de Usuário: " GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <Label styleClass="Label" text="Filmes Disponiveis: " GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <Label styleClass="Label" text="Créditos: " GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <Label styleClass="Label" text="Mais sobre mim: " GridPane.columnIndex="0" GridPane.rowIndex="3" />
 
-                <Label  fx:id="lblNomeUsuario" styleClass="label" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-                <Label  fx:id="lblFilmes" styleClass="Label" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                <Label  fx:id="lblCreditos" styleClass="label" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
-                <Button  fx:id="btnMaisPerfil" styleClass="Label" GridPane.columnIndex="3" GridPane.rowIndex="3"/>
+                <Label fx:id="lblNomeUsuario" styleClass="label" text="login" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <Label fx:id="lblFilmes" styleClass="Label" text="Qtd de Filmes" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label fx:id="lblCreditos" styleClass="label" text="Creditos disponiveis" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <Button fx:id="btnMaisPerfil" styleClass="Label" text="Mais do perfil" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             </GridPane>
             <ImageView fitHeight="164.0" fitWidth="225.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </GridPane>
       <ScrollPane layoutX="100" layoutY="200.0" prefHeight="200.0" prefWidth="600">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="600" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="186.0" prefWidth="600" />
         </content>
       </ScrollPane>
    </children>
