--- a/src/java/main/java/br/ip2/project/view/perfil/perfil.fxml
+++ b/src/java/main/java/br/ip2/project/view/perfil/perfil.fxml
@@ -2,6 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -11,7 +14,25 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="658.0" styleClass="background" stylesheets="@perfil.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.br.ip2.project.view.perfil.PerfilController">
    <children>
-      <GridPane layoutX="69.0" layoutY="4.0" prefHeight="162.0" prefWidth="580.0">
+       <MenuBar layoutX="-6.0" layoutY="9.0" prefHeight="0.0" prefWidth="638.0" styleClass="menu-bar">
+           <Menu mnemonicParsing="false" styleClass="menu" text="Eu">
+               <MenuItem mnemonicParsing="false" onAction="#toHome" styleClass="menu-item" text="Home" />
+               <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Meus Filmes" />
+               <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Meus Favoritos" />
+               <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Compartilhar Perfil " />
+               <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Sair" onAction="#sair"/>
+           </Menu>
+           <Menu mnemonicParsing="false" styleClass="menu" text="Filmes">
+               <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Galeria de Filmes" />
+               <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Fórum" />
+           </Menu>
+           <Menu mnemonicParsing="false" styleClass="menu" text="Amigos">
+               <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Encontrar Amigos" />
+           </Menu>
+       </MenuBar>
+
+
+      <GridPane layoutX="69.0" layoutY="47.0" prefHeight="162.0" prefWidth="580.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="226.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="374.0" minWidth="10.0" prefWidth="374.0" />
@@ -20,7 +41,8 @@
           <RowConstraints maxHeight="163.0" minHeight="10.0" prefHeight="163.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-
+            <Pane fx:id="avatar" prefHeight="200" prefWidth="200" />
+      
              
             <GridPane prefHeight="129.0" prefWidth="372.0" GridPane.columnIndex="1">
               <columnConstraints>
@@ -35,18 +57,17 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
-
+      
                 <Label styleClass="Label" text="Nome de Usuário: " GridPane.columnIndex="0" GridPane.rowIndex="0" />
                 <Label styleClass="Label" text="Filmes Disponiveis: " GridPane.columnIndex="0" GridPane.rowIndex="1" />
                 <Label styleClass="Label" text="Créditos: " GridPane.columnIndex="0" GridPane.rowIndex="2" />
-
-
+      
+      
                 <Label fx:id="lblNomeUsuario" styleClass="label" text="login" GridPane.columnIndex="1" GridPane.rowIndex="0" />
                 <Label fx:id="lblFilmes" styleClass="Label" text="Qtd de Filmes" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                 <Label fx:id="lblCreditos" styleClass="label" text="Creditos disponiveis" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                 <Button fx:id="btnMaisPerfil" styleClass="Label" text="Mais do perfil" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             </GridPane>
-            <Pane fx:id="avatar" prefHeight="146.0" prefWidth="201.0" />
 
          </children>
       </GridPane>
@@ -55,8 +76,8 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="185.0" prefWidth="600" />
         </content>
       </ScrollPane>
-      <Label layoutX="148.0" layoutY="200.0" text="Meus Favoritos" />
-      <Label fx:id="lblMsg" layoutX="350.0" layoutY="200.0" text="tipo cliente" />
-      <Label fx:id="lblErro" layoutX="79.0" layoutY="149.0" prefHeight="51.0" prefWidth="405.0" />
+      <Label layoutX="149.0" layoutY="214.0" text="Meus Favoritos" />
+      <Label fx:id="lblMsg" layoutX="339.0" layoutY="214.0" text="tipo cliente" />
+      <Label fx:id="lblErro" layoutX="102.0" layoutY="176.0" prefHeight="69.0" prefWidth="495.0" />
    </children>
 </AnchorPane>
