--- a/src/java/main/java/br/ip2/project/view/fxml/home.fxml
+++ b/src/java/main/java/br/ip2/project/view/fxml/home.fxml
@@ -17,9 +17,8 @@
             <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Sair" onAction="#sair"/>
         </Menu>
         <Menu mnemonicParsing="false" styleClass="menu" text="Filmes">
-            <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Visitar Estante" />
-
-            <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Compartilhar" />
+            <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Galeria" />
+            <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Fórum" />
         </Menu>
         <Menu mnemonicParsing="false" styleClass="menu" text="Amigos">
             <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Encontrar Amigos" />
