--- a/src/java/main/java/br/ip2/project/view/fxml/perfil.fxml
+++ b/src/java/main/java/br/ip2/project/view/fxml/perfil.fxml
@@ -22,7 +22,7 @@
                <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Sair" onAction="#sair"/>
            </Menu>
            <Menu mnemonicParsing="false" styleClass="menu" text="Filmes">
-               <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Galeria de Filmes" />
+               <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Galeria" />
                <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Fórum" />
            </Menu>
            <Menu mnemonicParsing="false" styleClass="menu" text="Amigos">
