Criação de menu que possa ser usados em todos os fxmls

--- a/src/java/main/java/br/ip2/project/view/fxml/Galeria.fxml
+++ b/src/java/main/java/br/ip2/project/view/fxml/Galeria.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="main.java.br.ip2.project.view.controllers.GaleriaController"
+            fx:controller="main.java.br.ip2.project.view.front_controllers.GaleriaController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
