--- a/src/java/main/java/br/ip2/project/view/fxml/galeria.fxml
+++ b/src/java/main/java/br/ip2/project/view/fxml/galeria.fxml
@@ -14,13 +14,13 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="anchorGaleria" prefHeight="600.0" prefWidth="900.0" stylesheets="../css/front_end.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.br.ip2.project.view.front_controllers.GaleriaController">
+<VBox fx:id="anchorGaleria" prefHeight="600" prefWidth="800" stylesheets="@../css/front_end.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.br.ip2.project.view.front_controllers.GaleriaController">
   <children>
     <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <items>
         <AnchorPane>
           <children>
-            <Label alignment="CENTER" layoutX="14.0" layoutY="44.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" text="Meus Favoritos" textAlignment="CENTER" wrapText="false">
+            <Label alignment="CENTER" layoutX="14.0" layoutY="44.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" styleClass="Label" text="Meus Favoritos" textAlignment="CENTER" wrapText="false">
               <font>
                 <Font size="18.0" fx:id="x1" />
               </font>
@@ -32,10 +32,10 @@
         </AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
           <content>
-            <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="576.0" prefWidth="442.0">
+            <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="531.0" prefWidth="379.0">
               <children>
-                <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="48.0" style="&#10;" text="Busque por Gênero" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-                        <GridPane layoutX="15.0" layoutY="138.0" prefHeight="278.0" prefWidth="414.0">
+                <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="48.0" style="&#10;" styleClass="Label" text="Busque por Gênero" textAlignment="CENTER" textFill="$x2" wrapText="false" />
+                        <GridPane layoutX="5.0" layoutY="138.0" prefHeight="278.0" prefWidth="380.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -46,34 +46,34 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <Pane prefHeight="200.0" prefWidth="200.0">
+                              <Pane fx:id="comedia" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.columnIndex="1">
                                  <children>
-                                    <Label layoutX="31.0" layoutY="21.0" text="Label" />
+                                    <Label layoutX="24.0" layoutY="33.0" text="Comedia " />
                                  </children>
                               </Pane>
-                              <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+                              <Pane fx:id="acao" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.rowIndex="1">
                                  <children>
-                                    <Label layoutX="25.0" layoutY="38.0" text="Label" />
+                                    <Label layoutX="57.0" layoutY="33.0" text="Ação" />
                                  </children>
                               </Pane>
-                              <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                              <Pane fx:id="aventura" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                  <children>
-                                    <Label layoutX="39.0" layoutY="30.0" text="Label" />
+                                    <Label layoutX="21.0" layoutY="33.0" text="Aventura" />
                                  </children>
                               </Pane>
-                              <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                              <Pane fx:id="nacionais" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.rowIndex="2">
                                  <children>
-                                    <Label layoutX="23.0" layoutY="42.0" text="Label" />
+                                    <Label layoutX="40.0" layoutY="32.0" text="Nacionais" />
                                  </children>
                               </Pane>
-                              <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+                              <Pane fx:id="familia" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                  <children>
-                                    <Label layoutX="37.0" layoutY="30.0" text="Label" />
+                                    <Label layoutX="39.0" layoutY="32.0" text="Família" />
                                  </children>
                               </Pane>
-                              <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                              <Pane fx:id="drama" prefHeight="200.0" prefWidth="200.0" style="-fx-border-radius: 25px;" styleClass="pnGenero">
                                  <children>
-                                    <Label layoutX="36.0" layoutY="36.0" text="Label" />
+                                    <Label layoutX="47.0" layoutY="33.0" text="Drama" />
                                  </children>
                               </Pane>
                            </children>
@@ -82,9 +82,9 @@
             </AnchorPane>
           </content>
         </ScrollPane>
-        <AnchorPane prefHeight="551.0" prefWidth="299.0">
+        <AnchorPane prefHeight="551.0" prefWidth="299.0" style="-fx-border-radius: 25px; -fx-background-radius: 25px;">
           <children>
-            <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="54.0" style="&#10;" text="Detalhes " textAlignment="CENTER" textFill="$x2" wrapText="false" />
+            <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="54.0" style="&#10;" styleClass="Label" text="Detalhes " textAlignment="CENTER" textFill="$x2" wrapText="false" />
           </children>
         </AnchorPane>
       </items>
