--- a/src/java/main/java/br/ip2/project/view/fxml/menu.fxml
+++ b/src/java/main/java/br/ip2/project/view/fxml/menu.fxml
@@ -4,16 +4,16 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 
-<MenuBar prefHeight="0.0" prefWidth="638.0" styleClass="menu-bar" stylesheets="../css/front_end.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.br.ip2.project.view.front_controllers.MenuController">
+<MenuBar prefHeight="30.0" prefWidth="800" styleClass="menu-bar" stylesheets="@../css/front_end.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.br.ip2.project.view.front_controllers.MenuController">
         <Menu mnemonicParsing="false" styleClass="menu" text="Eu">
-            <MenuItem mnemonicParsing="false" text="Home" onAction="#toHome" styleClass="menu-item"/>
+            <MenuItem mnemonicParsing="false" onAction="#toHome" styleClass="menu-item" text="Home" />
             <MenuItem mnemonicParsing="false" onAction="#toPerfil" styleClass="menu-item" text="Perfil" />
             <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Meus Favoritos" />
             <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Compartilhar Perfil " />
             <MenuItem mnemonicParsing="false" onAction="#sair" styleClass="menu-item" text="Sair" />
         </Menu>
         <Menu mnemonicParsing="false" styleClass="menu" text="Filmes">
-            <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Galeria" onAction="#toGaleria"/>
+            <MenuItem mnemonicParsing="false" onAction="#toGaleria" styleClass="menu-item" text="Galeria" />
             <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Fórum" />
         </Menu>
         <Menu mnemonicParsing="false" styleClass="menu" text="Amigos">
