--- a/src/java/main/java/br/ip2/project/view/fxml/home.fxml
+++ b/src/java/main/java/br/ip2/project/view/fxml/home.fxml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane fx:id="anchorHome" prefHeight="600" prefWidth="800" styleClass="background" stylesheets="@../css/home.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.br.ip2.project.view.front_controllers.HomeController">
+<AnchorPane fx:id="anchorHome" prefHeight="600" prefWidth="800" styleClass="background" stylesheets="@../css/home.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.br.ip2.project.view.front_controllers.HomeController">
 
-    <Pane layoutX="14.0" layoutY="176.0" prefHeight="237.0" prefWidth="283.0">
+    <Pane layoutX="14.0" layoutY="176.0" prefHeight="347.0" prefWidth="329.0" styleClass="background-pane">
       <children>
           <Label layoutX="14.0" layoutY="14.0" styleClass="title" text="Para Você Hoje" />
       </children></Pane>
-    <Label layoutX="377.0" layoutY="78.0" styleClass="title" text="Dos Seus Amigos" />
-   <ScrollPane layoutX="377.0" layoutY="119.0" prefHeight="300.0" prefWidth="250.0">
-     <content>
-       <AnchorPane fx:id="feedNoticias" minHeight="0.0" minWidth="0.0" prefHeight="300" prefWidth="250" />
-     </content>
+    <Label layoutX="415.0" layoutY="116.0" styleClass="title" text="Feed de Notícias" />
+   <ScrollPane layoutX="415.0" layoutY="165.0" prefHeight="390.0" prefWidth="350.0">
+      <content>
+       <AnchorPane fx:id="feedNoticias" minHeight="0.0" minWidth="0.0" prefHeight="390.0" prefWidth="350.0" />
+      </content>
    </ScrollPane>
-   <Pane fx:id="pnPost" layoutX="76.0" layoutY="54.0" prefHeight="75.0" prefWidth="283.0">
+   <Pane fx:id="pnPost" layoutX="76.0" layoutY="54.0" prefHeight="75.0" prefWidth="201.0">
       <children>
           <Label fx:id="lblpost" layoutX="14.0" layoutY="14.0" text="Compartilhe com os Amigos" />
       </children></Pane>
