--- a/src/java/main/java/br/ip2/project/view/fxml/perfil.fxml
+++ b/src/java/main/java/br/ip2/project/view/fxml/perfil.fxml
@@ -2,9 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -12,55 +9,48 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="600" prefWidth="800" fx:id="anchorPerfil" styleClass="background" stylesheets="@../css/perfil.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.br.ip2.project.view.front_controllers.PerfilController">
+<AnchorPane fx:id="anchorPerfil" prefHeight="600" prefWidth="800" styleClass="background" stylesheets="@../css/perfil.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.br.ip2.project.view.front_controllers.PerfilController">
    <children>
 
-      <GridPane layoutX="69.0" layoutY="47.0" prefHeight="162.0" prefWidth="580.0">
+             
+      <GridPane layoutX="400.0" layoutY="30.0" prefHeight="206.0" prefWidth="400.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="226.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="374.0" minWidth="10.0" prefWidth="374.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints />
+            <ColumnConstraints />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="163.0" minHeight="10.0" prefHeight="163.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-         <children>
-            <Pane fx:id="avatar" prefHeight="200" prefWidth="200" />
-      
-             
-            <GridPane prefHeight="129.0" prefWidth="372.0" GridPane.columnIndex="1">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints />
-                  <ColumnConstraints />
-              </columnConstraints>
-              <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-      
-                <Label styleClass="Label" text="Nome de Usuário: " GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                <Label styleClass="Label" text="Filmes Disponiveis: " GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                <Label styleClass="Label" text="Créditos: " GridPane.columnIndex="0" GridPane.rowIndex="2" />
-      
-      
-                <Label fx:id="lblNomeUsuario" styleClass="label" text="login" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                <Label fx:id="lblFilmes" styleClass="Label" text="Qtd de Filmes" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <Label fx:id="lblCreditos" styleClass="label" text="Creditos disponiveis" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                <Button fx:id="btnMaisPerfil" styleClass="Label" text="Mais do perfil" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            </GridPane>
 
-         </children>
+                <Label styleClass="Label" text="Nome de Usuário: " GridPane.columnIndex="0" GridPane.rowIndex="0" />
+          <Label styleClass="Label" text="Filmes Disponiveis: " GridPane.columnIndex="0" GridPane.rowIndex="1" />
+          <Label styleClass="Label" text="Créditos: " GridPane.columnIndex="0" GridPane.rowIndex="2" />
+
+      
+          <Label fx:id="lblNomeUsuario" styleClass="label" text="login" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+          <Label fx:id="lblFilmes" layoutX="40.0" styleClass="Label" text="Qtd de Filmes" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+          <Label fx:id="lblCreditos" styleClass="label" text="Creditos disponiveis" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+          <Button fx:id="btnMaisPerfil" styleClass="Label" text="Mais do perfil" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+         <Label fx:id="lblMsg" text="tipo cliente" GridPane.rowIndex="3" />
       </GridPane>
-      <ScrollPane layoutX="120.0" layoutY="238.0" prefHeight="162.0" prefWidth="580.0">
+      <ScrollPane layoutX="41.0" layoutY="255.0" prefHeight="320.0" prefWidth="298.0">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="185.0" prefWidth="600" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="320.0" prefWidth="303.0" />
         </content>
       </ScrollPane>
-      <Label layoutX="149.0" layoutY="214.0" text="Meus Favoritos" />
-      <Label fx:id="lblMsg" layoutX="339.0" layoutY="214.0" text="tipo cliente" />
-      <Label fx:id="lblErro" layoutX="102.0" layoutY="176.0" prefHeight="69.0" prefWidth="495.0" />
+      <Label layoutX="35.0" layoutY="223.0" text="Meus Favoritos" />
+      <Label fx:id="lblErro" layoutX="305.0" layoutY="415.0" prefHeight="39.0" prefWidth="495.0" />
+      <Pane fx:id="avatar" layoutX="41.0" layoutY="35.0" prefHeight="179.0" prefWidth="200.0" />
+      <Label layoutX="371.0" layoutY="242.0" text="Minhas atividades" />
+      <ScrollPane layoutX="378.0" layoutY="286.0" prefHeight="297.0" prefWidth="350.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="291.0" prefWidth="381.0" />
+        </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
