--- a/src/br/ip2/project/view/fxml/telaFilmes.fxml
+++ b/src/br/ip2/project/view/fxml/telaFilmes.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane fx:id="telafilmes" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="820.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.project.view.front_controllers.telaFilmesController">
+<AnchorPane fx:id="telafilmes" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="820.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.project.view.front_controllers.TelaFilmesController">
    <children>
       <Pane fx:id="pn1" layoutX="52.0" layoutY="128.0" prefHeight="300.0" prefWidth="200.0" />
       <Pane fx:id="pn2" layoutX="354.0" layoutY="128.0" prefHeight="300.0" prefWidth="200.0" />
