--- a/src/br/ip2/project/view/fxml/telaFilmes.fxml
+++ b/src/br/ip2/project/view/fxml/telaFilmes.fxml
@@ -1,15 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="telafilmes" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="820.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.project.view.front_controllers.TelaFilmesController">
    <children>
-      <Pane fx:id="pn1" layoutX="52.0" layoutY="128.0" prefHeight="300.0" prefWidth="200.0" />
-      <Pane fx:id="pn2" layoutX="354.0" layoutY="128.0" prefHeight="300.0" prefWidth="200.0" />
-      <Pane fx:id="pn3" layoutX="648.0" layoutY="128.0" prefHeight="300.0" prefWidth="200.0" />
+      <Label alignment="CENTER" layoutX="14.0" layoutY="44.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" styleClass="Label" text="Pesquise aqui" textAlignment="CENTER" wrapText="false">
+         <font>
+            <Font size="18.0" fx:id="x1" />
+         </font>
+         <textFill>
+            <Color blue="0.624" green="0.624" red="0.624" fx:id="x2" />
+         </textFill>
+      </Label>
+      <TextField layoutX="14.0" layoutY="96.0" />
+      <Button layoutX="178.0" layoutY="96.0" mnemonicParsing="false" text="Go" />
+      <Pane fx:id="comedia" layoutX="460.0" layoutY="70.0" prefHeight="50.0" prefWidth="100.0" styleClass="pnGenero">
+         <children>
+            <Label layoutX="15.0" layoutY="20.0" text="Comedia " />
+         </children>
+      </Pane>
+      <Pane fx:id="aventura" layoutX="760.0" layoutY="70.0" prefHeight="50.0" prefWidth="100.0" styleClass="pnGenero">
+         <children>
+            <Label layoutX="15.0" layoutY="20.0" text="Aventura" />
+         </children>
+      </Pane>
+      <Pane fx:id="familia" layoutX="560.0" layoutY="70.0" prefHeight="50.0" prefWidth="100.0" styleClass="pnGenero">
+         <children>
+            <Label layoutX="25.0" layoutY="20.0" text="Família" />
+         </children>
+      </Pane>
+      <Pane fx:id="acao" layoutX="660.0" layoutY="70.0" onMouseReleased="#toAcao" prefHeight="50.0" prefWidth="100.0" styleClass="pnGenero">
+         <children>
+            <Label layoutX="30.0" layoutY="20.0" text="Ação" />
+         </children>
+      </Pane>
+      <Pane fx:id="drama" layoutX="360.0" layoutY="70.0" onMouseReleased="#toDrama" prefHeight="50.0" prefWidth="100.0" style="-fx-border-radius: 25px;" styleClass="pnGenero">
+         <children>
+            <Label layoutX="25.0" layoutY="20.0" text="Drama" />
+         </children>
+      </Pane>
+      <Pane fx:id="nacionais" layoutX="260.0" layoutY="70.0" prefHeight="50.0" prefWidth="100.0" styleClass="pnGenero">
+         <children>
+            <Label layoutX="15.0" layoutY="20.0" text="Nacionais" />
+         </children>
+      </Pane>
+      <Pane fx:id="pn2" layoutX="94.0" layoutY="178.0" prefHeight="300.0" prefWidth="200.0" />
+      <Pane fx:id="pn3" layoutX="391.0" layoutY="255.0" prefHeight="130.0" prefWidth="93.0" />
       <Pane fx:id="pn4" layoutX="52.0" layoutY="448.0" prefHeight="300.0" prefWidth="200.0" />
       <Pane fx:id="pn5" layoutX="354.0" layoutY="456.0" prefHeight="300.0" prefWidth="200.0" />
       <Pane fx:id="pn6" layoutX="655.0" layoutY="456.0" prefHeight="300.0" prefWidth="200.0" />
+
+            <Pane fx:id="pn1" layoutX="610.0" layoutY="178.0" prefHeight="300.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
