--- a/src/br/ip2/project/view/fxml/telaFilmes.fxml
+++ b/src/br/ip2/project/view/fxml/telaFilmes.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Blend?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.paint.Color?>
@@ -10,6 +12,11 @@
 
 <AnchorPane fx:id="telafilmes" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="820.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.project.view.front_controllers.TelaFilmesController">
    <children>
+      <Pane fx:id="pn1" layoutX="100.0" layoutY="200.0" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: blue;">
+         <effect>
+            <Blend opacity="0.64" />
+         </effect>
+      </Pane>
       <Label alignment="CENTER" layoutX="14.0" layoutY="44.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" styleClass="Label" text="Pesquise aqui" textAlignment="CENTER" wrapText="false">
          <font>
             <Font size="18.0" fx:id="x1" />
@@ -50,12 +57,16 @@
             <Label layoutX="15.0" layoutY="20.0" text="Nacionais" />
          </children>
       </Pane>
-      <Pane fx:id="pn2" layoutX="94.0" layoutY="178.0" prefHeight="300.0" prefWidth="200.0" />
-      <Pane fx:id="pn3" layoutX="391.0" layoutY="255.0" prefHeight="130.0" prefWidth="93.0" />
-      <Pane fx:id="pn4" layoutX="52.0" layoutY="448.0" prefHeight="300.0" prefWidth="200.0" />
-      <Pane fx:id="pn5" layoutX="354.0" layoutY="456.0" prefHeight="300.0" prefWidth="200.0" />
-      <Pane fx:id="pn6" layoutX="655.0" layoutY="456.0" prefHeight="300.0" prefWidth="200.0" />
-
-            <Pane fx:id="pn1" layoutX="610.0" layoutY="178.0" prefHeight="300.0" prefWidth="200.0" />
+      <Pane fx:id="pn11" layoutX="400.0" layoutY="200.0" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: blue;" />
+      <Pane fx:id="pn111" layoutX="700.0" layoutY="200.0" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: blue;" />
+      <Pane fx:id="pn12" layoutX="110.0" layoutY="600.0" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: blue;" />
+      <Pane fx:id="pn112" layoutX="410.0" layoutY="600.0" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: blue;" />
+      <Pane fx:id="pn1111" layoutX="710.0" layoutY="600.0" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: blue;" />
+      <ButtonBar layoutX="100.0" layoutY="500.0" prefHeight="40.0" prefWidth="200.0">
+        <buttons>
+            <Button alignment="CENTER" mnemonicParsing="false" text="Button" />
+          <Button mnemonicParsing="false" text="Button" />
+        </buttons>
+      </ButtonBar>
    </children>
 </AnchorPane>
