--- a/src/br/ip2/easylend/view/fxml/perfil.fxml
+++ b/src/br/ip2/easylend/view/fxml/perfil.fxml
@@ -9,14 +9,15 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:id="anchorPerfil" prefHeight="600" prefWidth="800" styleClass="background" stylesheets="@../css/perfil.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.easylend.view.front_controllers.PerfilController">
+<AnchorPane fx:id="anchorPerfil" prefHeight="400" prefWidth="600" styleClass="background" stylesheets="@../css/front_end.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.easylend.view.front_controllers.PerfilController">
    <children>
 
              
-      <GridPane layoutX="400.0" layoutY="30.0" prefHeight="206.0" prefWidth="400.0">
+      <GridPane layoutX="300.0" layoutY="30.0" prefHeight="206.0" prefWidth="400.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints />
             <ColumnConstraints />
         </columnConstraints>
@@ -28,29 +29,28 @@
         </rowConstraints>
 
                 <Label styleClass="Label" text="Nome de Usuário: " GridPane.columnIndex="0" GridPane.rowIndex="0" />
-          <Label styleClass="Label" text="Filmes Disponiveis: " GridPane.columnIndex="0" GridPane.rowIndex="1" />
+          <Label prefHeight="25.0" prefWidth="137.0" styleClass="Label" text="Seus FIlmes" GridPane.columnIndex="0" GridPane.rowIndex="1" />
           <Label styleClass="Label" text="Créditos: " GridPane.columnIndex="0" GridPane.rowIndex="2" />
 
       
-          <Label fx:id="lblNomeUsuario" styleClass="label" text="login" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+          <Label fx:id="lblNomeUsuario" styleClass="Label" text="login" GridPane.columnIndex="1" GridPane.rowIndex="0" />
           <Label fx:id="lblFilmes" layoutX="40.0" styleClass="Label" text="Qtd de Filmes" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-          <Label fx:id="lblCreditos" styleClass="label" text="Creditos disponiveis" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-          <Button fx:id="btnMaisPerfil" styleClass="Label" text="Mais do perfil" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-         <Label fx:id="lblMsg" text="tipo cliente" GridPane.rowIndex="3" />
+          <Label fx:id="lblCreditos" styleClass="Label" text="Creditos disponiveis" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+         <Label fx:id="lblMsg" styleClass="Label" text="tipo cliente" GridPane.rowIndex="3" />
+         <Button fx:id="btnAlterarLogin" mnemonicParsing="false" text="Alterar" GridPane.columnIndex="2" />
+         <Button fx:id="btnAddFIlme" layoutX="277.0" layoutY="24.0" mnemonicParsing="false" text="Adicionar" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+         <Button layoutX="277.0" layoutY="76.0" mnemonicParsing="false" text="Comprar" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+         <Button layoutX="277.0" layoutY="127.0" mnemonicParsing="false" text="Alterar" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+         <Label fx:id="lblTipoCliente" prefHeight="39.0" prefWidth="106.0" styleClass="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
       </GridPane>
-      <ScrollPane layoutX="41.0" layoutY="255.0" prefHeight="320.0" prefWidth="298.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="320.0" prefWidth="303.0" />
-        </content>
-      </ScrollPane>
-      <Label layoutX="35.0" layoutY="223.0" text="Meus Favoritos" />
+      <Label layoutX="74.0" layoutY="246.0" styleClass="Label" text="Meus Favoritos" />
       <Label fx:id="lblErro" layoutX="305.0" layoutY="415.0" prefHeight="39.0" prefWidth="495.0" />
-      <Pane fx:id="avatar" layoutX="41.0" layoutY="35.0" prefHeight="179.0" prefWidth="200.0" />
-      <Label layoutX="371.0" layoutY="242.0" text="Minhas atividades" />
-      <ScrollPane layoutX="378.0" layoutY="286.0" prefHeight="297.0" prefWidth="350.0">
+      <Pane fx:id="avatar" layoutX="41.0" layoutY="35.0" prefHeight="194.0" prefWidth="215.0" />
+      <ScrollPane layoutX="74.0" layoutY="275.0" prefHeight="250.0" prefWidth="573.0">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="291.0" prefWidth="381.0" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="252.0" prefWidth="576.0" />
         </content>
       </ScrollPane>
+       <Button fx:id="btnMaisPerfil" layoutX="228.0" layoutY="243.0" styleClass="Label" text="Mais do perfil" />
    </children>
 </AnchorPane>
